# MasterThesis

./: README.md
src/aruco_ros/aruco_ros/: CMakeLists.txt  package.xml
src/aruco_ros/aruco_ros/launch/: multiple.launch  single.launch
src/aruco_ros/aruco_ros/src/: simple_multiple.cpp  simple_single.cpp
src/campero_ur10/description/campero_ur10_description/launch/: campero_ur10_bringup.launch  campero_ur10_bringup_position.launch
src/campero_ur10/description/campero_ur10_description/robots/: campero_ur10.urdf.xacro
src/campero_ur10/description/ur10_description/urdf/: ur10.urdf.xacro
src/campero_ur10/desired_positions/: DP_PBVC.txt
src/campero_ur10/desired_positions/IBVC/: DP_IBVC_HVC.txt
src/campero_ur10/desired_positions_lab/: positions.txt
src/campero_ur10/images/: HVC_p1_p2_end_effector_velocities.eps  HVC_p1_p2_error_x_y.eps  HVC_p1_p2_joint_positions.eps  HVC_p1_p2_joint_velocities.eps  HVC_p1_p2_movement.eps  HVC_p1_p2_position_end_effector.eps  HVC_p1_p3_end_effector_velocities.eps  HVC_p1_p3_error_x_y.eps  HVC_p1_p3_joint_positions.eps  HVC_p1_p3_joint_velocities.eps  HVC_p1_p3_movement.eps  HVC_p1_p3_position_end_effector.eps  HVC_p1_p4_end_effector_velocities.eps  HVC_p1_p4_error_x_y.eps  HVC_p1_p4_joint_positions.eps  HVC_p1_p4_joint_velocities.eps  HVC_p1_p4_movement.eps  HVC_p1_p4_position_end_effector.eps  HVC_p1_p5_end_effector_velocities.eps  HVC_p1_p5_error_x_y.eps  HVC_p1_p5_joint_positions.eps  HVC_p1_p5_joint_velocities.eps  HVC_p1_p5_movement.eps  HVC_p1_p5_position_end_effector.eps  HVC_p2_p1_end_effector_velocities.eps  HVC_p2_p1_error_x_y.eps  HVC_p2_p1_joint_positions.eps  HVC_p2_p1_joint_velocities.eps  HVC_p2_p1_movement.eps  HVC_p2_p1_position_end_effector.eps  HVC_p3_p1_end_effector_velocities.eps  HVC_p3_p1_error_x_y.eps  HVC_p3_p1_joint_positions.eps  HVC_p3_p1_joint_velocities.eps  HVC_p3_p1_movement.eps  HVC_p3_p1_position_end_effector.eps  HVC_p4_p1_end_effector_velocities.eps  HVC_p4_p1_error_x_y.eps  HVC_p4_p1_joint_positions.eps  HVC_p4_p1_joint_velocities.eps  (+131 more)
src/campero_ur10/images_lab/: real-HVC-p2-p1_end_effector_velocities.eps  real-HVC-p2-p1_error_x_y.eps  real-HVC-p2-p1_joint_positions.eps  real-HVC-p2-p1_joint_velocities.eps  real-HVC-p2-p1_movement.eps  real-HVC-p2-p1_position_end_effector.eps  real-HVC-p3-p1_end_effector_velocities.eps  real-HVC-p3-p1_joint_positions.eps  real-HVC-p3-p1_joint_velocities.eps  real-HVC-p3-p1_movement.eps  real-HVC-p3-p1_position_end_effector.eps  real-HVC-p4-p1_end_effector_velocities.eps  real-HVC-p4-p1_joint_positions.eps  real-HVC-p4-p1_joint_velocities.eps  real-HVC-p4-p1_movement.eps  real-HVC-p4-p1_position_end_effector.eps  real-HVC-p5-p1_end_effector_velocities.eps  real-HVC-p5-p1_joint_positions.eps  real-HVC-p5-p1_joint_velocities.eps  real-HVC-p5-p1_movement.eps  real-HVC-p5-p1_position_end_effector.eps  real-IBVC-CC-p2-p1_end_effector_velocities.eps  real-IBVC-CC-p2-p1_joint_positions.eps  real-IBVC-CC-p2-p1_joint_velocities.eps  real-IBVC-CC-p2-p1_movement.eps  real-IBVC-CC-p2-p1_position_end_effector.eps  real-IBVC-CC-p2-p1_rho_theta_error.eps  real-IBVC-CC-p3-p1_end_effector_velocities.eps  real-IBVC-CC-p3-p1_joint_positions.eps  real-IBVC-CC-p3-p1_joint_velocities.eps  real-IBVC-CC-p3-p1_movement.eps  real-IBVC-CC-p3-p1_position_end_effector.eps  real-IBVC-p2-p1_end_effector_velocities.eps  real-IBVC-p2-p1_error_x_y.eps  real-IBVC-p2-p1_joint_positions.eps  real-IBVC-p2-p1_joint_velocities.eps  real-IBVC-p2-p1_movement.eps  real-IBVC-p2-p1_position_end_effector.eps  real-IBVC-p4-p1_end_effector_velocities.eps  real-IBVC-p4-p1_joint_positions.eps  (+33 more)
src/campero_ur10/my_files/: CMakeLists.txt  package.xml
src/campero_ur10/my_files/launch/: goTo.launch  hybrid_visual_control.launch  image_cc_visual_control.launch  image_visual_control.launch  movements.launch  plots.launch  position_visual_control.launch  pruebatopic.launch  save_desired.launch  send_desired.launch
src/campero_ur10/my_files/scripts/: plots.py  save_desired_image.py  save_desired_position.py  send_desired_image.py  send_desired_position.py
src/campero_ur10/my_files/src/: goTo.cpp  ros_HVC.cpp  ros_IBVC.cpp  ros_IBVC_CC.cpp  ros_PBC.cpp  ros_PBVC.cpp
src/campero_ur10/my_ur10/new_ur10_moveit_config/: CMakeLists.txt  package.xml
src/campero_ur10/my_ur10/new_ur10_moveit_config/config/: fake_controllers.yaml  ros_controllers.yaml  ur10.srdf  ur10_controllers.yaml
src/campero_ur10/my_ur10/new_ur10_moveit_config/launch/: IBVC.rviz  PBVC.rviz  VC.rviz  chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch  (+3 more)
src/campero_ur10/my_ur10/new_ur_description/: CMakeLists.txt  package.xml
src/campero_ur10/my_ur10/new_ur_gazebo/: CMakeLists.txt  package.xml
src/campero_ur10/my_ur10_msgs/: CMakeLists.txt  package.xml
src/campero_ur10/my_ur10_msgs/msg/: ArucoMarker.msg  ArucoMarkerArray.msg  e_m_plot.msg  plot.msg  plot_IBVC.msg
src/realsense/realsense2_camera/launch/: rs_rgbd.launch
src/realsense/realsense2_camera/rviz/: urdf.rviz
src/realsense/realsense2_camera/urdf/: _d435.gazebo.xacro  _d435.urdf.xacro
(+39 files in other folders)
